--- a/enter1/enter1.html
+++ b/enter1/enter1.html
@@ -1,72 +1,86 @@
-<!DOCTYPE html>
-<!-- saved from url=(0131)https://jksb.v.zzu.edu.cn/vls6sss/zzujksb.dll/gettongxing?ptopid=tEC94E910E798416796E0A024A3D85280&door=0017&sid=210906201311660511 -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<!DOCTYPE html> 
+	<head> 
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
+	<meta name="viewport" content="width=350, initial-scale=1.0, maximum-scale=1.0, user-scalable=1.0, user-scalable=no;" /> 
+	<META HTTP-EQUIV="pragma" CONTENT="no-cache"> 
+	<META HTTP-EQUIV="Cache-Control" CONTENT="no-cache, must-revalidate"> 
+	<META HTTP-EQUIV="expires" CONTENT="Wed, 26 Feb 2007 08:21:57 GMT"> 
+	<title>郑州大学数据中台2021</title> 
+	<link rel="stylesheet" type="text/css" href="https://jksb.v.zzu.edu.cn/imagesss/_xwss_2017.css" /><style> 
+	#bak_0 {MARGIN:0 auto; left: 0;WIDTH: 350px; min-HEIGHT:540px;}</style> 
+	</head> 
+	<body> 
+	<form method="POST" name="myform52" action=""> 
+	<div id="bak_0"> 
+	<div style="width:100%;height:88px;background:url(https://jksb.v.zzu.edu.cn/imagesss/title316_32213.png);"></div><div style="width:100%;height:7px;BACKGROUND-IMAGE: url(/images/split5.png)"></div><div style="width:100%; min-height:90px;"><div style="width:100%;height:6px;text-align:left;"></div> 
+	<div style="width:100%;min-height:26px;line-height:26px;font-size:16px;color:#00c;font-weight:500;font-family:黑体;BACKGROUND-IMAGE:url(https://jksb.v.zzu.edu.cn//imagesss/sf_sheng4.png)"><span style="color:#00a">旅游管理学院.余晓曼</span>　<a href="/vls6sss/zzujksb.dll/logout?ptopid=s363B5F208A19431DBE8CF4AE0C696910"><span style="font-size:12px;;color:#00c;">〖切换账号〗</span></a><br />主校区大门东门.<span style="background-color:#070;color:#ff0">入口</span><br />身份：批准出入校园学生<span style="font-size:12px;color:#333;"id=current_date>(05月31日 07:58获取)</span><br /><span style="color:#f00;font-size:12px;color:#666">关注“郑州大学网络管理中心”微信公众号可提醒健康打卡</span></div></div>
+	<div style="width:100%;height:15px;background-color:#090;" id="bian92a"></div> 
+	<div style="width:100%;height:280px;"> 
+	<div style="width:15px;height:100%;background-color:#090;float:left" id="bian92b1"></div> 
+	<div style="width:320px;height:100%;float:left;text-align:center;"> 
+	<img src="http://phototj.photo.store.qq.com/psc?/V13X7WW42EEinq/bqQfVz5yrrGYSXMvKr.cqTsh75wBeLT.2JViBhTnqb*nL9rOzZ25ihcm72JhiJiYSFDukd1Rlc2XU.arEoyDCGJc8LOnWH5glVeFkzrAQwk!/b&bo=lAXQB5QF0AcRECc!&rf=viewer_311" style="height:280px;border:0px;" /> 
+	</div> 
+	<div style="width:14px;height:100%;background-color:#090;float:right" id="bian92b2"></div> 
+	</div> 
+	<div style="width:100%;height:15px;background-color:#090;" id="bian92c"></div> 
+	<div style="width:100%;height:7px;BACKGROUND-IMAGE: url(/images/split5.png)"></div> 
+	
+<div style="width:100%;height:1000px;">
+<iframe name="mainframe1" src="https://safetrip.zhengzhou.gov.cn:20021/mobile/index.html?sqid=202003041100460076&lx=13&orgid=1398" marginwidth="0" marginheight="0" height="100%" 
+width="100%" scrolling="no" border="0" frameborder="0" allowtransparency="true"></iframe> </div>
 
-<meta name="viewport" content="width=350, initial-scale=1.0, maximum-scale=1.0, user-scalable=1.0, user-scalable=no;">
-<meta http-equiv="pragma" content="no-cache">
-<meta http-equiv="Cache-Control" content="no-cache, must-revalidate">
-<meta http-equiv="expires" content="Wed, 26 Feb 2007 08:21:57 GMT">
-<title>郑州大学数据中台2021</title>
-<link rel="stylesheet" type="text/css" href="./郑州大学数据中台2020_files/_xwss_2017.css"><style>
-#bak_0 {MARGIN:0 auto; left: 0;WIDTH: 350px; min-HEIGHT:540px;}
+</div> 
+	
+	<div style="width:1px;height:1px;"> 
+	<iframe name="zzj_fun_426" id="zzj_fun_426s" src="https://jksb.v.zzu.edu.cn/vls6sss/zzujksb.dll/getdipos?ptopid=s363B5F208A19431DBE8CF4AE0C696910&sid=220531075858878184&fun2=0001" marginwidth="0" marginheight="0" height="100%" 
+
+	width="100%" scrolling="no" border="0" frameborder="0" allowtransparency="true"></iframe> 
+	</div> 
+	<input type="hidden" name="ptopid" value="s363B5F208A19431DBE8CF4AE0C696910"><input type="hidden" name="sid" value="220531075858878263">
 
 
-</style>
 
-</head>
-<body>
-<form method="POST" name="myform52" action="https://jksb.v.zzu.edu.cn/vls6sss/zzujksb.dll/gettongxing?ptopid=tEC94E910E798416796E0A024A3D85280&amp;door=0017&amp;sid=210906201311660511">
-<div id="bak_0">  
-  <div style="width:100%;height:102px;background:url(https://jksb.v.zzu.edu.cn/imagesss/title316_19968.png);"><div style="width:100%;height:32px;line-height:32px;text-align:right"><a href="https://jksb.v.zzu.edu.cn/vls6sss/zzujksb.dll/logout?ptopid=s59972F9F97E841AC8B135DA2596FFBE9"><span style="color:#00c;">〖切换账号〗</span></a>　</div></div><div style="width:100%;height:7px;BACKGROUND-IMAGE: url(/images/split5.png)"></div><div style="width:100%; min-height:90px;"><div style="width:100%;height:32%;line-height:32px;text-align:left;"><span style="font-size:12px;color:#333;">获取时间：</span><span style="font-size:16px;color:#a0a;" id=current_date>09月06日 20:10　</span><span style="font-size:12px;color:#333;">有效期剩余 </span><span id="tim317" style="font-size:22px;color:#c00;font-weight:500;font-family:黑体;">9分59秒</span></div><div style="width:100%;height:7px;BACKGROUND-IMAGE: url(/images/split5.png)"></div>
-  <div style="width:100%;min-height:26px;line-height:26px;font-size:18px;color:#00c;font-weight:500;font-family:黑体;BACKGROUND-IMAGE:url(https://jksb.v.zzu.edu.cn/imagesss/sf_sheng3.png)">　<span style="color:#00a">旅游管理学院.余晓曼</span><br />　主校区大门东门.<span style="background-color:#070;color:#ff0">入口</span><br />　身份：批准出入校园学生<br /><span style="font-size:12px;color:#666">关注“郑州大学网络管理中心”微信公众号可提醒健康打卡</span></div></div>
+</form> </div> 
 
-<div style="width:100%;height:25px;background-color:#0012ff;" id="bian92a"></div><div style="width:100%;height:300px;"><div style="width:25px;height:100%;background-color:#0012ff;float:left" id="bian92b1"></div><div style="width:300px;height:100%;float:left;text-align:center;"><img src="http://phototj.photo.store.qq.com/psc?/V13X7WW42EEinq/bqQfVz5yrrGYSXMvKr.cqTsh75wBeLT.2JViBhTnqb*nL9rOzZ25ihcm72JhiJiYSFDukd1Rlc2XU.arEoyDCGJc8LOnWH5glVeFkzrAQwk!/b&bo=lAXQB5QF0AcRECc!&rf=viewer_311" style="height:300px;border:0px;" /></div><div style="width:25px;height:100%;background-color:#0012ff;float:right" id="bian92b2"></div></div><div style="width:100%;height:25px;background-color:#0012ff;" id="bian92c"></div><div style="width:100%;height:7px;BACKGROUND-IMAGE: url(/images/split5.png)"></div><div style="width:100%;min-height:18px;line-height:18px;font-size:12px;color:#666;text-align:center">郑州大学疫情防控领导小组、保卫处、信息化办公室</div><div style="width:100%;height:18px;line-height:18px;font-size:12px;color:#666;text-align:center" id="msg11"></div>
-</div>
-
-<div style="width:1px;height:1px;">
-  <iframe name="zzj_fun_426" id="zzj_fun_426s" src="https://jksb.v.zzu.edu.cn/vls6sss/zzujksb.dll/getdipos?ptopid=s9800EDB3C8334262B9FB567FC83E6E52&sid=220322210115032753&fun2=0003" marginwidth="0" marginheight="0" height="100%"
-    width="100%" scrolling="no" border="0" frameborder="0" allowtransparency="true"></iframe>
-</div>
-<input type="hidden" name="ptopid" value="s9800EDB3C8334262B9FB567FC83E6E52"><input type="hidden" name="sid" value="220322210115032709"></form>
-
-<div style="width:100%;height:50px;"></div>
-</body>
-</html>
-<script language="javascript">
-  function zzjCallOneUrl(us){
-    document.getElementById("zzj_fun_426s").src=us;
-  }
-  var timeID=0;
-var tt1=599;
-tt2=0;
-tt3=0;
-var timeID=setInterval("hnceTimer()",1000);
-function hnceTimer(){
-  tt1--;
-  if (tt1>=0){
-if ((tt1%2)==1){
-  document.getElementById('bian92a').style.backgroundColor="#bfffc8";
-  document.getElementById('bian92b1').style.backgroundColor="#bfffc8";
-  document.getElementById('bian92b2').style.backgroundColor="#bfffc8";
-  document.getElementById('bian92c').style.backgroundColor="#bfffc8";
-}else{
-  document.getElementById('bian92a').style.backgroundColor="#090";
-  document.getElementById('bian92b1').style.backgroundColor="#090";
-  document.getElementById('bian92b2').style.backgroundColor="#090";
-  document.getElementById('bian92c').style.backgroundColor="#090";
-}
-  tt2=tt1 % 60;
-  tt3=(tt1-tt2)/60;
-  document.getElementById("tim317").innerHTML=tt3+"分"+tt2+"秒";
-  }else{document.getElementById("tim317").innerHTML="已作废";}
-}
+</body> 
+<script Language="javascript"> 
+	function zzjCallOneUrl(us){ 
+	document.getElementById("zzj_fun_426s").src=us; 
+	} 
+	var timeID=0; 
+	var tt1=600; 
+	tt2=0; 
+	tt3=0; 
+	var timeID=setInterval("hnceTimer()",1000); 
+	function hnceTimer(){ 
+	tt1--; 
+	if (tt1>=0){ 
+	if ((tt1 % 2)==1){ 
+	document.getElementById('bian92a').style.backgroundColor="#bfffc8"; 
+	document.getElementById('bian92b1').style.backgroundColor="#bfffc8"; 
+	document.getElementById('bian92b2').style.backgroundColor="#bfffc8"; 
+	document.getElementById('bian92c').style.backgroundColor="#bfffc8"; 
+	}else{ 
+	document.getElementById('bian92a').style.backgroundColor="#090"; 
+	document.getElementById('bian92b1').style.backgroundColor="#090"; 
+	document.getElementById('bian92b2').style.backgroundColor="#090"; 
+	document.getElementById('bian92c').style.backgroundColor="#090"; 
+	} 
+	tt2=tt1 % 60; 
+	tt3=(tt1-tt2)/60; 
+	document.getElementById("tim317").innerHTML=tt3+"分"+tt2+"秒"; 
+	}else{document.getElementById("tim317").innerHTML="已作废";} 
+        }
 function getTime() {
   var myDate = new Date();
   var m = myDate.getMonth() + 1<10?'0'+ (myDate.getMonth() + 1):myDate.getMonth() + 1;
   var d = myDate.getDate()<10?'0'+myDate.getDate():myDate.getDate();
   var h = myDate.getHours()<10?'0'+myDate.getHours():myDate.getHours();
   var ms = myDate.getMinutes()<10?'0'+myDate.getMinutes():myDate.getMinutes();
-  document.getElementById("current_date").innerHTML =  m + '月' + d + '日' + '  ' + h +':'+ ms + '   ';
+  document.getElementById("current_date").innerHTML =  '(' + m + '月' + d + '日' + '  ' + h +':'+ ms + '获' +'取'+')';
 }
 getTime();
-</script>
+	 </script> 
+
+</html>
+
